--- a/templates/index.html
+++ b/templates/index.html
@@ -25,14 +25,14 @@
        <div class="row display-table-row">
            
            <!-- Side Menu Navigation -->
-           <div class="col-md-2 display-table-cell valign-top" id="side-menu">
-              <h1>Bucketlist</h1> 
+           <div class="col-md-2 col-sm-1 display-table-cell valign-top hidden-xs" id="side-menu">
+              <h1 class="hidden-sm hidden-xs">Bucketlist</h1> 
                <ul>
                    <li class="link active">
                        <a href="#collapse-all-wishes" data-toggle="collapse" aria-controls="collapse-all-wishes">
                            <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
-                           <span>All Public Wishes</span>
-                           <span class="label label-success pull-right">20</span>
+                           <span class="hidden-sm hidden-xs">All Public Wishes</span>
+                           <span class="label label-success pull-right hidden-sm hidden-xs">20</span>
                        </a>
                        <ul class="collapse collapseable" id="collapse-all-wishes">
                            <li><a href="#">Public Wishes</a></li>
@@ -42,8 +42,8 @@
                    <li class="link">
                        <a href="#collapse-my-wishes" data-toggle="collapse" aria-controls="collapse-my-wishes">
                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                           <span>Manage My Wishes</span>
-                           <span class="label label-success pull-right">20</span>
+                           <span class="hidden-sm hidden-xs">Manage My Wishes</span>
+                           <span class="label label-success pull-right hidden-sm hidden-xs">20</span>
                        </a>
                        <ul class="collapse collapseable" id="collapse-my-wishes">
                            <li><a href="#">My Public Wishes</a></li>
@@ -53,23 +53,35 @@
                    <li class="link settings-btn">
                        <a href="#">
                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                           <span>Manage Account</span>
+                           <span class="hidden-sm hidden-xs">Manage Account</span>
                        </a>
                    </li>
                </ul>
            </div>
            <!-- End Side Menu Navigation -->
            <!-- Main Content Area -->
-           <div class="col-md-10 display-table-cell valign-top">
+           <div class="col-md-10 col-sm-11 display-table-cell valign-top">
                
                <div class="row">
                 <header id="nav-header" class="clearfix">
                    <div class="col-md-5">
-                       <input type="text" id="header-search-field" placeholder="search for wishes...">
+                       
+                       <!-- Side Bar Toggle -->
+                       <nav class="navbar-default pull-left">
+                           <button type="button" class="navbar-toggle collapsed" data-toggle="offcanvas" data-target="#side-menu">
+                               <span class="sr-only">Toggle Navigation</span>                               
+                               <span class="icon-bar"></span>
+                               <span class="icon-bar"></span>
+                               <span class="icon-bar"></span>
+                           </button>
+                       </nav>
+                       <!-- Side Bar Toggle -->
+                       
+                       <input type="text" class="hidden-sm hidden-xs" id="header-search-field" placeholder="search for wishes...">
                     </div>
                    <div class="col-md-7">
                        <ul class="pull-right">
-                           <li id="welcome">
+                           <li id="welcome" class="hidden-sm hidden-xs">
                                Welcome back jmwashuma@live.com
                            </li>
                            <li>
@@ -99,5 +111,7 @@
     <script src="../static/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
+    <!-- Custom Js -->
+    <script src="../static/js/custom.js"></script>
   </body>
 </html>
