--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -203,3 +203,29 @@ html,body{
 }
 
 /* Toggle Side bar */
+
+/* WishForm Styles */
+
+#content{
+    margin: 20px 0px 50px 0px;
+    background-color: #fff;
+    border-top: 4px #e7eaec solid;
+}
+
+#content header{
+    border-bottom: 1px #f3f3f4 solid;
+    padding: 10px 0px;
+}
+
+.page_title{
+    font-size: 14px;
+    font-weight: bold;
+    padding: 0px 0px 0px 20px;
+    margin: 0px;
+}
+
+.content-inner{
+    padding: 20px;
+}
+
+/* WishForm Styles */
