[Finished #148963341] Made New Page Responsive

--- a/static/css/wish-form.css
+++ b/static/css/wish-form.css
@@ -16,3 +16,7 @@ label {
 input[type="file"] {
     display: inline-block;
 }
+
+.chosen-container,chosen-container-multi{
+    width: 100% !important;
+}
