--- a/templates/wish-form.html
+++ b/templates/wish-form.html
@@ -39,7 +39,7 @@
                         
                        </a>
                        <ul class="collapse collapseable" id="collapse-all-wishes">
-                           <li><a href="#">Public Wishes</a></li>
+                           <li><a href="allwishes.html">Public Wishes</a></li>
                            <li class="active"><a href="wish-form.html">Create New Wish <span class="glyphicon glyphicon-plus pull-right"></span></a></li>                            
                        </ul>
                    </li>
