--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                            <span class="label label-success pull-right hidden-sm hidden-xs">20</span>
                        </a>
                        <ul class="collapse collapseable" id="collapse-all-wishes">
-                           <li><a href="#">Public Wishes</a></li>
+                           <li><a href="allwishes.html">Public Wishes</a></li>
                            <li><a href="wish-form.html">Create New Wish <span class="glyphicon glyphicon-plus pull-right"></span></a></li>                            
                        </ul>
                    </li>
