[Finished #148966375] Create Private and Public Wishes Pages

--- a/templates/wish-form.html
+++ b/templates/wish-form.html
@@ -50,8 +50,8 @@
                            
                        </a>
                        <ul class="collapse collapseable" id="collapse-my-wishes">
-                           <li><a href="#">My Public Wishes</a></li>
-                           <li><a href="#">My Private Wishes</a></li>
+                           <li><a href="public-wishes.html">My Public Wishes</a></li>
+                           <li><a href="private-wishes.html">My Private Wishes</a></li>
                        </ul>
                    </li>
                    <li class="link settings-btn">
@@ -81,11 +81,11 @@
                        </nav>
                        <!-- Side Bar Toggle -->
                        
-                       <input type="text" class="hidden-sm hidden-xs" id="header-search-field" placeholder="search for wishes...">
+                      
                     </div>
-                   <div class="col-md-7">
+                   <div class="col-md-12">
                        <ul class="pull-right">
-                           <li id="welcome" class="hidden-sm hidden-xs">
+                           <li id="welcome" class="hidden-xs">
                                Welcome back jmwashuma@live.com
                            </li>
                            <li>
