--- a/templates/public-wishes.html
+++ b/templates/public-wishes.html
@@ -102,7 +102,7 @@
                
                <div id="content">
                    <header class="clearfix">
-                       <h2 class="page_title pull-left">All Wishes</h2>
+                       <h2 class="page_title pull-left">My Public Wishes</h2>
                    <a href="wish-form.html" type="button" class="btn btn-xs btn-primary pull-right">Create New Wish</a>
                  
                    </header>
@@ -151,8 +151,10 @@
                                              <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Career</button> 
                                         <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
                                              <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Education</button> 
-                                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                             <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Business</button>
+                                     <a href="wish-form.html" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
+                                         <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
                                     </div>
                                    </div>
                                    </div>
@@ -188,8 +190,10 @@
                                              <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Career</button> 
                                         <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
                                              <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Education</button> 
-                                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                             <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Business</button>
+                                        <a href="wish-form.html" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
+                                         <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
                                     </div>
                                    </div>
                                    </div>
