[Finished #148966443] Finished Profile, Login and Register Pages

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -250,6 +250,17 @@ html,body{
     border: 1px solid #1cc394;  
 }
 
+.btn-primary:active:hover, .btn-primary.active:hover, .open>.dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open>.dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open>.dropdown-toggle.btn-primary.focus{
+     background-color: #1cc394;
+    border: 1px solid #1cc394; 
+}
+
+.btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+    color: #ffffff;
+   background-color: #1cc394;
+    border: 1px solid #1cc394;
+}
+
 .btn-primary:hover{
     background-color: #1cc394;
     border: 1px solid #1cc394;
@@ -287,3 +298,8 @@ hr {
 .pager{
     margin: 0px;
 }
+
+.dropdown-menu {
+    left: -155px
+}
+
