--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,7 @@
                    <li class="link active">
                        <a href="#collapse-all-wishes" data-toggle="collapse" aria-controls="collapse-all-wishes">
                            <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
-                           <span class="hidden-sm hidden-xs">All Public Wishes</span>
-                           <span class="label label-success pull-right hidden-sm hidden-xs">20</span>
+                           <span class="hidden-sm hidden-xs">All Public Wishes</span>                          
                        </a>
                        <ul class="collapse collapseable" id="collapse-all-wishes">
                            <li><a href="allwishes.html">Public Wishes</a></li>
@@ -42,16 +41,16 @@
                    <li class="link">
                        <a href="#collapse-my-wishes" data-toggle="collapse" aria-controls="collapse-my-wishes">
                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                           <span class="hidden-sm hidden-xs">Manage My Wishes</span>
-                           <span class="label label-success pull-right hidden-sm hidden-xs">20</span>
+                           <span class="hidden-sm hidden-xs">Manage My Wishes</span>                         
                        </a>
                        <ul class="collapse collapseable" id="collapse-my-wishes">
-                           <li><a href="#">My Public Wishes</a></li>
-                           <li><a href="#">My Private Wishes</a></li>
+                           <li><a href="all-my-wishes.html">All My Wishes</a></li>
+                           <li><a href="public-wishes.html">My Public Wishes</a></li>
+                           <li><a href="private-wishes.html">My Private Wishes</a></li>
                        </ul>
                    </li>
                    <li class="link settings-btn">
-                       <a href="#">
+                       <a href="manage.html">
                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                            <span class="hidden-sm hidden-xs">Manage Account</span>
                        </a>
@@ -80,6 +79,7 @@
                     </div>
                    <div class="col-md-12">
                        <ul class="pull-right">
+                           
                            <li id="welcome" class="hidden-sm hidden-xs">
                                Welcome back jmwashuma@live.com
                            </li>
@@ -89,6 +89,30 @@
                                    log out
                                </a>
                            </li>
+                           
+                            <li class="dropdown " id="menuLogin">
+                            <a class="dropdown-toggle btn btn-xs btn-primary" href="#" data-toggle="dropdown"  id="navLogin">Login <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
+                            <div class="dropdown-menu" style="padding:17px;">
+                                <form id="formLogin" class="form"> 
+                                    <label>Login</label> 
+                                    <input name="_csrf" id="token" type="hidden" value="ebTQ1WUN-vBIDMJeQuVOPewdteR2eYZoS4Lo">
+    							    <input name="username" id="username" type="text" placeholder="Username" pattern="^[a-z,A-Z,0-9,_]{6,15}$" data-valid-min="6" title="Enter your username" required="">
+    							    <input name="password" id="password" type="password" placeholder="Password" title="Enter your password" required=""><br>
+    							    <button type="button" id="btnLogin" class="btn btn-xs btn-primary">Login</button>
+    							</form>
+                                <form><a href="#" title="Fast and free sign up!" id="btnNewUser" data-toggle="collapse" data-target="#formRegister">New User? Sign-up..</a></form>
+                                <form id="formRegister" class="form collapse">
+                                    <input name="_csrf" id="token" type="hidden" value="ebTQ1WUN-vBIDMJeQuVOPewdteR2eYZoS4Lo">
+                                    <input name="email" id="inputEmail" type="email" placeholder="Email" required="">
+        						    <input name="username" id="inputUsername" type="text" placeholder="Username" pattern="^[a-z,A-Z,0-9,_]{6,15}$" data-valid-min="6" title="Choose a username" required=""><br>
+    							    <input name="password" id="inputpassword" type="password" placeholder="Password" required=""> 
+                                    <input name="verify" id="inputVerify" type="password" placeholder="Password (again)" required=""><br>                                  
+    							    <button type="button" id="btnRegister" class="btn btn-xs btn-primary">Sign Up</button>
+    							</form>
+                               
+                            </div>
+                        </li>
+                           
                        </ul>
                     </div>
                 </header>
