--- a/templates/all-my-wishes.html
+++ b/templates/all-my-wishes.html
@@ -16,6 +16,7 @@
     <!-- Custome Styles -->  
     <link href="../static/css/custom.css" rel="stylesheet">
     <link href="../static/css/wish-form.css" rel="stylesheet">
+    <link href="../static/css/allwishes.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,7 +51,6 @@
                            
                        </a>
                        <ul class="collapse collapseable" id="collapse-my-wishes">
-                           <li><a href="all-my-wishes.html">All My Wishes</a></li>
                            <li><a href="public-wishes.html">My Public Wishes</a></li>
                            <li><a href="private-wishes.html">My Private Wishes</a></li>
                        </ul>
@@ -117,53 +117,116 @@
                </div>
                
                <div id="content">
-                   <header>
-                       <h2 class="page_title">Create a New Wish</h2>
+                   <header class="clearfix">
+                       <h2 class="page_title pull-left">All My Wishes</h2>
+                   <a href="wish-form.html" type="button" class="btn btn-xs btn-primary pull-right">Create New Wish</a>
+                 
                    </header>
                    
+                   
                    <div class="content-inner">
-                       <div class="form-wrapper">
-                           <form>
-                               <div class="form-group">
-                                   <label class="sr-only">Title</label>
-                                   <input type="text" class="form-control" placeholder="Title">
+                       <!-- Search Bar -->
+                       <div class="row search-row">
+                           <div class="col-md-12">
+                               <div class="input-group">
+                                   <input type="text" class="form-control" id="search" placeholder="Search wishes">
+                                   <span class="input-group-btn">
+                                       <button type="button" class="btn btn-default go">Go!</button>
+                                   </span>
                                </div>
-                               <div class="form-group">
-                                   <label class="sr-only">Tags</label>
-                                   <select data-placeholder="Select tags" multiple name="tags" class="form-control chosen-select">
-                                    <option></option>
-                                    <option>Career</option>
-                                    <option>Politics</option>
-                                    <option>Business</option>                                    
-                                   </select>
-                               </div>
-                               <div class="form-group">
-                                   <label class="sr-only">Description</label>
-                                   <textarea class="form-control" placeholder="Wish Description" name="description"></textarea>
-                               </div>
-                               <div class="form-group">
-                                   <label>
-                                    Add a Wish Image
-                                    <input type="file">
-                                    </label>
-                               </div> 
-                               <div class="checkbox">
-                                   <label>
-                                       <input type="checkbox"> Make wish not visible to others
-                                   </label>
-                               </div> 
-                               
-                               <div class="checkbox">
-                                   <label>
-                                       <input type="checkbox"> Mark wish as accomplished
-                                   </label>
-                               </div>
-                               <div class="clearfix">
-                                    <button type="submit" class="btn btn-info pull-left">Cancel</button>
-                                   <button type="submit" class="btn btn-primary pull-right">Save</button>
-                               </div>
-                           </form>
+                           </div>
                        </div>
+                        <!-- Search Bar -->
+                       
+                       <div class="row wishes-row">
+                           <div class="col-sm-2 col-md-1">
+                               <img class="img-circle hidden-xs" src="../static/img/img.jpg">
+                           </div>
+                           <div class="col-sm-10 col-md-11">
+                               <div class="row">
+                                   <div class="col-xs-5 col-sm-9 col-md-9">
+                                       <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
+                                       <small> Posted 2 days ago.</small>
+                                   </div>
+                                   <div class="col-xs-7 col-sm-3 col-md-3">
+                                       <div class="clearfix">
+                                           <div class="pull-right wish-status">
+                                               <b class="status"> Wish Status </b>
+                                               <button type="button" class="btn btn-xs btn-primary pull-right disabled">Achived</button>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                               <div class="bs-component">
+                               <div class="well well-sm wishes-well"><p>
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                               </div>
+                                <div class="clearfix">
+                                    <div class="pull-right">
+                                         <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Career</button> 
+                                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Education</button> 
+                                     <a href="wish-form.html" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
+                                         <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
+                                    </div>
+                                   </div>
+                                   </div>
+                           </div>
+                       </div> 
+                       <hr>   
+                       <div class="row wishes-row">
+                           <div class="col-sm-2 col-md-1">
+                               <img class="img-circle hidden-xs" src="../static/img/img.jpg">
+                           </div>
+                           <div class="col-sm-10 col-md-11">
+                               <div class="row">
+                                   <div class="col-xs-5 col-sm-9 col-md-9">
+                                       <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
+                                       <small> Posted 2 days ago.</small>
+                                   </div>
+                                   <div class="col-xs-7 col-sm-3 col-md-3">
+                                       <div class="clearfix">
+                                           <div class="pull-right wish-status">
+                                               <b class="status"> Wish Status </b>
+                                               <button type="button" class="btn btn-xs btn-primary pull-right disabled">Achived</button>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                               <div class="bs-component">
+                               <div class="well well-sm wishes-well"><p>
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                               </div>
+                                <div class="clearfix">
+                                    <div class="pull-right">
+                                         <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Career</button> 
+                                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Education</button> 
+                                        <a href="wish-form.html" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
+                                         <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
+                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
+                                    </div>
+                                   </div>
+                                   </div>
+                           </div>
+                       </div> 
+                       <hr>
+                      <div class="clearfix">
+                          <div class="pull-right">
+                                                             
+                                  <ul class="pager">
+                                      <li class="previous disabled"><a href="#">← Older</a></li>
+                                      <li class="next"><a href="#">Newer →</a></li>
+                                  </ul>
+                                 
+                          </div>
+                       </div>
+                       
                    </div>
                </div>
                
