--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>BucketList | Home</title>
+    <title>{% block browsertitle %} Bucketlist | Home {% endblock %}</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-   
-    <!-- Custome Styles -->  
+
+    <!-- Custom Styles -->  
     <link href="../static/css/custom.css" rel="stylesheet">
+    <link href="../static/css/wish-form.css" rel="stylesheet">
+    <link href="../static/css/allwishes.css" rel="stylesheet">
+    {% block Custom_css %} {% endblock%}  
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,8 +38,8 @@
                            <span class="hidden-sm hidden-xs">All Public Wishes</span>                          
                        </a>
                        <ul class="collapse collapseable" id="collapse-all-wishes">
-                           <li><a href="allwishes.html">Public Wishes</a></li>
-                           <li><a href="wish-form.html">Create New Wish <span class="glyphicon glyphicon-plus pull-right"></span></a></li>                            
+                           <li><a href="/">Public Wishes</a></li>
+                           <li><a href="/create">Create New Wish <span class="glyphicon glyphicon-plus pull-right"></span></a></li>                            
                        </ul>
                    </li>
                    <li class="link">
@@ -44,13 +48,13 @@
                            <span class="hidden-sm hidden-xs">Manage My Wishes</span>                         
                        </a>
                        <ul class="collapse collapseable" id="collapse-my-wishes">
-                           <li><a href="all-my-wishes.html">All My Wishes</a></li>
-                           <li><a href="public-wishes.html">My Public Wishes</a></li>
-                           <li><a href="private-wishes.html">My Private Wishes</a></li>
+                           <li><a href="/mywishes">All My Wishes</a></li>
+                           <li><a href="/mypublicwishes">My Public Wishes</a></li>
+                           <li><a href="/myprivatewishes">My Private Wishes</a></li>
                        </ul>
                    </li>
                    <li class="link settings-btn">
-                       <a href="manage.html">
+                       <a href="/profile">
                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                            <span class="hidden-sm hidden-xs">Manage Account</span>
                        </a>
@@ -82,13 +86,7 @@
                            
                            <li id="welcome" class="hidden-sm hidden-xs">
                                Welcome back jmwashuma@live.com
-                           </li>
-                           <li>
-                               <a href="#" class="logout">
-                                   <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                                   log out
-                               </a>
-                           </li>
+                           </li>                     
                            
                             <li class="dropdown " id="menuLogin">
                             <a class="dropdown-toggle btn btn-xs btn-primary" href="#" data-toggle="dropdown"  id="navLogin">Login <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
@@ -117,7 +115,9 @@
                     </div>
                 </header>
                </div>
-               
+
+                {% block content %} {% endblock %}
+
                 <!-- Footer -->               
                <div class="row">
                    <footer id="bucketlist-footer" class="clearfix">
@@ -138,5 +138,6 @@
     <script src="../static/js/bootstrap.min.js"></script>
     <!-- Custom Js -->
     <script src="../static/js/custom.js"></script>
+     {% block Custom_Scripts %} {% endblock%}  
   </body>
 </html>
