--- a/templates/allwishes.html
+++ b/templates/allwishes.html
@@ -22,83 +22,60 @@
                 </div>
             </div>
         </div>
-        <!-- Search Bar -->
+        <!-- Search Bar -->   
+  
         
-        <div class="row wishes-row">
+         {% if bucket_list_activities %}
+            {% for bucket_list_activity in bucket_list_activities %}
+          <div class="row wishes-row">
             <div class="col-sm-2 col-md-1">
                 <img class="img-circle hidden-xs" src="../static/img/img.jpg">
             </div>
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
-                        <small> Posted 2 days ago.</small>
+                        <b>{{ bucket_list_activity.user }}</b> posted a wish on <b> {{ bucket_list_activity.title }}</b><br>
+                        <small> Posted {{ bucket_list_activity.date }}.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
                             <div class="pull-right wish-status">
                                 <b class="status"> Wish Status </b>
+                               {% if bucket_list_activity.wish_progress == True %}
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
+                                {% else %}
+                                <button type="button" class="btn btn-xs btn-primary pull-right disabled">Accomplished</button>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bs-component">
                 <div class="well well-sm wishes-well"><p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            {{ bucket_list_activity.description}} </p>
                 </div>
                 <div class="clearfix">
-                    <div class="pull-right">
-                            <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Career</button> 
-                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Education</button> 
-                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Business</button>
+                    <div class="pull-right">                       
+                        <a href="/create" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
+                            <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
+                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
                     </div>
                     </div>
                     </div>
             </div>
         </div> 
-        <hr>   
-        <div class="row wishes-row">
-            <div class="col-sm-2 col-md-1">
-                <img class="img-circle hidden-xs" src="../static/img/img.jpg">
-            </div>
-            <div class="col-sm-10 col-md-11">
-                <div class="row">
-                    <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
-                        <small> Posted 2 days ago.</small>
-                    </div>
-                    <div class="col-xs-7 col-sm-3 col-md-3">
-                        <div class="clearfix">
-                            <div class="pull-right wish-status">
-                                <b class="status"> Wish Status </b>
-                                <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
-                            </div>
-                        </div>
-                    </div>
+        <hr> 
+        {% endfor %}       
+            {% else %}
+            <div class="bs-component">
+                <div class="well well-sm wishes-well">
+                    <p> No wish added. </p>
                 </div>
-                <div class="bs-component">
-                <div class="well well-sm wishes-well"><p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
-                <div class="clearfix">
-                    <div class="pull-right">
-                            <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Career</button> 
-                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Education</button> 
-                        <button type="button" class="btn btn-xs btn-primary pull-right disabled tag-margin" role="button">
-                                <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>Business</button>
-                    </div>
-                    </div>
-                    </div>
-            </div>
-        </div> 
-        <hr>
-        <div class="clearfix">
+            {% endif %}
+
+         <div class="clearfix">
             <div class="pull-right">
                                                 
                     <ul class="pager">
@@ -108,7 +85,6 @@
                     
             </div>
         </div>
-        
     </div>
 </div>
 {% endblock %}
