--- a/templates/manage.html
+++ b/templates/manage.html
@@ -19,7 +19,14 @@
                 <div class="form-group">
                     <label class="sr-only">Email Address</label>
                     <input type="email" class="form-control" placeholder="Email">
-                </div>  
+                </div> 
+                
+                  <div class="form-group">
+                    <label>
+                    Add a Profile Image
+                    <input type="file">
+                    </label>
+                </div> 
                 
                 <div class="form-group">
                     <label class="sr-only">Password</label>
