--- a/templates/bucket_list_form.html
+++ b/templates/bucket_list_form.html
@@ -1,37 +1,38 @@
 {% extends "layout.html" %} 
-{% block browsertitle %} Bucketlist | Create Wish {% endblock %}
+{% block browsertitle %} Bucketlist | Create Bucket Item {% endblock %}
 
 {% block content %}               
 <div id="content">
     <header>
-        <h2 class="page_title">Create a New Wish</h2>
+        <h2 class="page_title">Create a New Bucket Item </h2>
     </header>
     
     <div class="content-inner">
         <div class="form-wrapper">
             <form action="" method="POST">
+                <!-- Prevents Cross site Scripting Attacks -->
                 {{form.hidden_tag()}}
                 <div class="form-group">
                     <label class="sr-only">Title</label>
-                    {{ form.title(placeholder="Title", class="form-control" ) }}                   
+                    {{ form.title(placeholder="Title", class="form-control", required ="*" ) }}                   
                 </div>             
                 <div class="form-group">
                     <label class="sr-only">Description</label>
-                     {{ form.description(placeholder="Wish Description...", class="form-control" ) }} 
+                     {{ form.description(placeholder="Wish Description...", class="form-control",  required ="*"  ) }} 
                     
                 </div>
               
                 <div class="checkbox">
                     <label>
-                        {{ form.wish_status(type="checkbox", value="true") }} 
-                       Make wish not visible to others
+                        {{ form.bucket_item_status(type="checkbox", value="true") }} 
+                       Make bucket item not visible to others
                     </label>
                 </div> 
                 
                 <div class="checkbox">
                     <label>
-                        {{ form.wish_progress(type="checkbox", value="true") }} 
-                         Mark wish as accomplished
+                        {{ form.bucket_item_progress(type="checkbox", value="true") }} 
+                         Mark bucket item as accomplished
                     </label>
                 </div>
                 <div class="clearfix">
