--- a/templates/my_private_bucket_items.html
+++ b/templates/my_private_bucket_items.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %} 
-{% block browsertitle %} Bucketlist | My Public Wishes {% endblock %}
+{% block browsertitle %} Bucketlist | My Private Activites {% endblock %}
 {% block content %}
-               
+                              
 <div id="content">
     <header class="clearfix">
-        <h2 class="page_title pull-left">My Public Wishes</h2>
-    <a href="/create" type="button" class="btn btn-xs btn-primary pull-right">Create New Wish</a>
+        <h2 class="page_title pull-left">My Private Activites</h2>
+    <a href="/create" type="button" class="btn btn-xs btn-primary pull-right">Create New</a>
     
     </header>
     
@@ -15,7 +15,7 @@
         <div class="row search-row">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="search" placeholder="Search wishes">
+                    <input type="text" class="form-control" id="search" placeholder="Search Bucket">
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default go">Go!</button>
                     </span>
@@ -31,7 +31,7 @@
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
+                        <b>John</b> posted an activity on <b> Joining Andela Fellowiship</b><br>
                         <small> Posted 2 days ago.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
@@ -83,7 +83,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
                 <div class="clearfix">
-                    <div class="pull-right">                             
+                    <div class="pull-right">                           
                         <a href="/create" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
                             <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
